fix: add endpoint to list device topics
